Changelog
=========

2.13.10 (unreleased)
--------------------

- Removed tracking of result length from the query plan. The calculation of the
  length of an intermediate index result can itself be expensive.

2.13.9 (2011-04-10)
-------------------

- Added a floor and ceiling value to the date range index. Values outside the
  specified range will be interpreted the same way as passing `None`, i.e.
  `since the beginning of time` and `until the end of it`. This allows the
  index to apply its optimizations, while objects with values outside this
  range can still be stored in a normal date index, which omits explicitly
  passed in `None` values.

2.13.8 (2011-04-01)
-------------------

- Fixed bug in date range index, which would omit objects exactly matching the
  query term if a resultset was provided.

- Fixed the BooleanIndex to not index objects without the cataloged attribute.

2.13.7 (2011-02-15)
-------------------

- Fixed the `DateIndex._unindex` to be of type `IIBTree` instead of `OIBTree`.
  It stores document ids as keys, which can only be ints.

2.13.6 (2011-02-10)
-------------------

- Remove docstrings from various methods, as they shouldn't be web-publishable.

2.13.5 (2011-02-05)
-------------------

- Fixed test failures introduced in 2.13.4.

2.13.4 (2011-02-05)
-------------------

- Added a new UUIDIndex, based on the common UnIndex. It behaves like a
  FieldIndex, but can only store one document id per value, so there's a 1:1
  mapping from value to document id. An error is logged if a different document
  id is indexed for an already taken value. The internal data structures are
  optimized for this and avoid storing one IITreeSet per value.

- Optimize sorting in presence of batching arguments. If a batch from the end
  of the result set is requested, we internally reverse the sorting order and
  at the end reverse the lazy sequence again. In a sequence with 100 entries,